<resources>
    <string name="app_name">Pokedex</string>

    <string name="unloaded_data">Loading…</string>

    <string name="title_pokemon_list">Pokemons</string>
    <string name="title_pokemon_detail">Pokemon Detail</string>

    <string name="title_items_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="welcome_message">Welcome to the Pokedex</string>
    <string name="pokemon_from_front">Pokemon from front</string>
    <string name="pokemon_from_back">Pokemon from back</string>
    <string name="height">Height</string>
    <string name="meters_indicator">m.</string>
    <string name="id_property">ID: %1$d</string>
    <string name="height_property">Height: %1$d cm</string>
    <string name="retry">Retry</string>
    <string name="types_label">Types:</string>
    <string name="abilities_label">Abilities:</string>
    <string name="games_list_label">Games : </string>
    <string name="evolutions_list_label">Evolution chain : </string>
    <string name="item_description_label">Description :</string>
    <string name="item_category_label">Category: </string>
    <string name="item">Item</string>


</resources>