<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clItemDetailWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">



        <ImageView
            android:id="@+id/ivItem"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toTopOf="@+id/llItemCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            android:contentDescription="@string/item"/>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llItemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/tvItemDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivItem">


            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unloaded_data"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvItemCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <TextView
                android:id="@+id/tvItemCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/unloaded_data"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvItemName" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unloaded_data"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llItemCategory" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/flLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>